# esp32_mouse_keyboard

./: .gitignore  CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
components/nkolban_BLE/: BLECharacteristic.h  BLEHIDDevice.cpp  BLESecurity.h  BLEUtils.cpp  HID_kbdmousejoystick.cpp  HID_kbdmousejoystick.h
doxygen/: doxygen.conf  doxygen.sh
hardware/: README.md  esp32miniBT.kicad_pcb  esp32miniBT.pro  esp32miniBT.sch  fp-info-cache  fp-lib-table  programmer_board.FCStd  programmer_board.stl  sym-lib-table
hardware/BOM/: BOM.txt
hardware/interactive_bom/: ibom_v0.4.html  ibom_v0.5.html
hardware/lib/: CMM-4030D-261-I2S-TR.lib
main/: CMakeLists.txt  Kconfig.projbuild  audio_streaming.c  audio_streaming.h  ble_hidd_demo_main.c  ble_hidd_demo_main.cpp  component.mk  config.h  esp_hidd_prf_api.c  esp_hidd_prf_api.h  hid_dev.c  hid_dev.h  hid_device_le_prf.c  hidd_le_prf_int.h  keyboard.c  keyboard.h  keylayouts.h  undefkeylayouts.h
main/ble_hid/: CMakeLists.txt  component.mk  hal_ble.c  hal_ble.h  hid_dev.c  hid_dev.h  hid_device_le_prf.c  hidd_le_prf_int.h
pcb/: ESP32-footprints-Shem-Lib.lib  MiscellaneousDevices.lib  README.md  akizuki.lib  esp32miniBT  esp32miniBT-cache.lib  esp32miniBT-rescue.lib  esp32miniBT.kicad_pcb  esp32miniBT.net  esp32miniBT.pro  esp32miniBT.sch  esp32miniBT.xml  fp-lib-table
pcb/ESP32-footprints-Lib.pretty/: ESP-32S.kicad_mod  ESP32-WROOM.kicad_mod  ESP3212.kicad_mod
pcb/common.pretty/: D_0805.kicad_mod  LED_0603.kicad_mod  Pin_Header_Straight_1x17_Pitch2.54mm.kicad_mod  (+1 more)
pcb/docs/: BOM.txt
(+6 files in other folders)
